Bug 453262 - image preview doesn't change when going trough files using TAB or arrow keys
Summary: image preview doesn't change when going trough files using TAB or arrow keys
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: panels: information (other bugs)
Version First Reported In: 23.08.0
Platform: Manjaro Linux
: NOR minor
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
: 478552 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-05-01 13:10 UTC by Thibault Molleman
Modified: 2026-03-09 12:59 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 26.04
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thibault Molleman 2022-05-01 13:10:30 UTC
SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1.  Open a folder with multiple files (jpg's, pdf's also have the same issue, doesn't matter)
2. click on the filename (which make the filename editable)
3. press the TAB key (which makes the next file in the list editable

OBSERVED RESULT
the preview is still the original file you selected

EXPECTED RESULT
the preview should change as you change from file to file when using the TAB key.
(for example in my usecase, I was renaming files based on the content of their first page, so going trough each file one by one using the preview would have been very convenient if it worked)

SOFTWARE/OS VERSIONS
Operating System: Manjaro Linux
KDE Plasma Version: 5.24.2
KDE Frameworks Version: 5.91.0
Qt Version: 5.15.2
Kernel Version: 5.16.11-2-MANJARO (64-bit)
Graphics Platform: X11
Processors: 16 × AMD Ryzen 7 3700X 8-Core Processor
Memory: 31.3 GiB of RAM
Graphics Processor: NVIDIA GeForce GTX 1080/PCIe/SSE2

(NOTE: I am aware i'm running outdated software, there was a problem with upgrading that I haven't bothered fixing yet. But I believe this issue also still exists in the latest version of Dolphin

ADDITIONAL INFORMATION
See this screencast of the issue as it happens, easily reproducible (on my end at least): https://youtu.be/vkwWnQmrHIc
Comment 1 Eric Armbruster 2023-08-30 18:45:41 UTC
The same problem exists when using arrow keys to change the selected file.
Comment 2 aristsakas 2025-12-26 15:21:04 UTC
*** Bug 478552 has been marked as a duplicate of this bug. ***
Comment 3 Bug Janitor Service 2026-03-07 12:17:14 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/1196
Comment 4 Méven 2026-03-07 12:20:13 UTC
(In reply to Eric Armbruster from comment #1)
> The same problem exists when using arrow keys to change the selected file.

I am not sure I reproduce this issue with dolphin 25.12, maybe you need particular circumstances.

Please open a separate bug this one will be fixed with https://invent.kde.org/system/dolphin/-/merge_requests/1196.
Comment 5 Méven 2026-03-09 09:56:07 UTC
Git commit 5cc61cac8589f227f05e814cefe6cfd7afec8245 by Méven Car.
Committed on 09/03/2026 at 09:55.
Pushed by meven into branch 'master'.

kitemlistview: when editing file name set anchored selection

So the selection manager can consider the selection has changed.

This makes sense as when editing file name you can only have a single item selected.

M  +1    -0    src/kitemviews/kitemlistview.cpp

https://invent.kde.org/system/dolphin/-/commit/5cc61cac8589f227f05e814cefe6cfd7afec8245
Comment 6 Riccardo Robecchi 2026-03-09 10:36:56 UTC
(In reply to Méven from comment #4)
> I am not sure I reproduce this issue with dolphin 25.12, maybe you need
> particular circumstances.

I cannot reproduce the issue any more, either. It seems like it was fixed somewhere along the way. Thanks for your work, Méven!
Comment 7 Méven 2026-03-09 10:58:15 UTC
Git commit c6885f187158f22b6b2c22a5bbc6f95df0272820 by Méven Car.
Committed on 09/03/2026 at 09:56.
Pushed by meven into branch 'release/26.04'.

kitemlistview: when editing file name set anchored selection

So the selection manager can consider the selection has changed.

This makes sense as when editing file name you can only have a single item selected.


(cherry picked from commit 5cc61cac8589f227f05e814cefe6cfd7afec8245)

Co-authored-by: Méven Car <meven@kde.org>

M  +1    -0    src/kitemviews/kitemlistview.cpp

https://invent.kde.org/system/dolphin/-/commit/c6885f187158f22b6b2c22a5bbc6f95df0272820