kitemlistview: when editing file name set anchored selection

So the selection manager can consider the selection has changed.

This makes sense as when editing file name you can only have a single item selected.

BUG: 453262


(cherry picked from commit 5cc61cac8589f227f05e814cefe6cfd7afec8245)

Co-authored-by: Méven Car <meven@kde.org>